--- a/.github/workflows/get_data.yml
+++ b/.github/workflows/get_data.yml
@@ -8,10 +8,6 @@ jobs:
   getdata:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      GIT_AUTHOR_NAME: "GitHub Action"
-      GIT_AUTHOR_EMAIL: "octobot@github.kom"
-      # GIT_COMMITTER_NAME: "GitHub Action"
-      # GIT_COMMITTER_EMAIL: "cotobot@github.kom"
 
     runs-on: ubuntu-latest
 
@@ -25,6 +21,8 @@ jobs:
 
     - name: Commiting data
       run: |
+        git config user.email "octobot@github.kom"
+        git config user.name "GitHub Action"
         git add "data/silo"
         git commit --no-edit -m "Update data"
         git push "https://woefe:$GITHUB_TOKEN@github.com/woefe/covid19stats.git" autodata
