--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -37,12 +37,12 @@ jobs:
       - name: Convert notebook to HTML
         run: |
           jupyter nbconvert \
-            --to html 
-            --no-input 
-            --template lab_condensed 
-            --TemplateExporter.extra_template_basedirs="nbconvert_template" 
-            --execute
-            --output index.html
+            --to html \
+            --no-input \
+            --template lab_condensed \
+            --TemplateExporter.extra_template_basedirs="nbconvert_template" \
+            --execute \
+            --output index.html \
             condensed.ipynb
 
       - name: Upload index.html artifact
