Enable Git LFS for data setup

--- a/.github/workflows/build_website.yml
+++ b/.github/workflows/build_website.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           repository: woefe/covid19stats
           ref: autodata
+          lfs: true
           path: autodata
 
       - name: Set up Python
