Set python3 as default python command

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Setup environment
+      run: |
+        sudo rm /usr/bin/python
+        sudo ln -s /usr/bin/python3 /usr/bin/python
+
+    - name: Clone autodata
+      uses: actions/checkout@v2
       with:
         ref: autodata
 
@@ -26,7 +32,7 @@ jobs:
         git add "data/silo"
         git commit --no-edit -m "Update data"
         git push "https://woefe:$GITHUB_TOKEN@github.com/woefe/covid19stats.git" autodata
-    
+
     # The filesize should always be increasing. Start checking after 2020-11-05, because some earlier files are smaller or duplicated
     - name: Check size increase
       shell: python
